Override gradle's security manager with a permissive one