@@ -4,6 +4,7 @@ import static org.junit.Assert.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
+import java.lang.management.*;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.*;
@@ -29,7 +30,6 @@ public final class JmhDriverTest {
     assertEquals(BenchmarkTarget.class.getName(), params.iterator().next());
     assertEquals(Optional.of(4), options.getForkCount());
   }
-  
 
   /**
    *  Note: Running JMH will result in an illegal reflective access, which has been promoted
@@ -84,7 +84,13 @@ public final class JmhDriverTest {
   public void testRunWithFork() throws Exception {
     Assume.assumeTrue(TEST_REAL_JMH);
     
+    // When running from an older (JDK 1.8) build using Gradle wrapper, the forking of a JVM will 
+    // otherwise fail due to Gradle's security manager (only seems to be installed when running with the wrapper);
+    // override Gradle's security manager with a permissive alternative to avoid failure.
+    final String securityManagerJvmArg = "-Djava.security.manager=" + PermissiveSecurityManager.class.getName();
+    
     final BenchmarkResult result = new JmhDriver(opts -> opts
+                                                 .jvmArgsAppend(securityManagerJvmArg)
                                                  .forks(1)
                                                  .verbosity(VerboseMode.NORMAL)
                                                  .warmupIterations(0)
